<resources>
    <string name="app_name">51奖学金</string>
    <string name="user_name">用户名</string>
    <string name="user_input_hint">请输入你的手机号</string>

    <string name="user_passwd">密码</string>
    <string name="user_passwd_input_hint">请输入登陆密码</string>
    <string name="login_btn">登陆</string>
    <string name="hello_world">Hello World</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="ddhk_header_back">返回</string>
    <string name="permission_cus_item_phone">Call Phone</string>
    <string name="permission_cus_title">Dear God</string>
    <string name="permission_cus_msg">To protect the peace of the world, open these permissions! You and I together save the world!</string>
    <string name="permission_on_close">They cancelled our request</string>
    <string name="permission_completed">All permissions requested completed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">没有找到符合条件的房源</string>

    <string name="show_share_dialog">显示分享界面</string>

    <string name="share_qq">调用QQ分享</string>
    <string name="share_weixin">调用微信分享</string>
    <string name="share_wxcircle">调用朋友圈分享</string>
    <string name="share_weibo">调用微博分享</string>
    <string name="share_qzone">调用QZone分享</string>

    <string name="share_bigimage">分享大图</string>
    <!--聊天-->
    <string name="emojicon_test_name">Test</string>
    <string name="at_your_in_group">%s @ you in group chat</string>
    <string name="msg_recall_by_user">This message has been recalled by %1$s</string>
    <string name="title_activity_context_menu">ContextMenuActivity</string>
    <string name="title_activity_change_pwd">ChangePwdActivity</string>



    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--直播-->
    //ijkplayer
    <string name="cube_views_load_more_loading">loading...</string>
    <string name="cube_views_load_more_click_to_load_more">Click to load more</string>
    <string name="cube_views_load_more_loaded_no_more">All the data has been loaded</string>
    <string name="cube_views_load_more_loaded_empty">It is empty. :(</string>
    <string name="cube_views_load_more_error">Load error, click to retry</string>
    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>

    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>

    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>

    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>

    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>

    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>


    <string name="giraffe_player_url_empty">Please specify the address of the video playback</string>

    <string name="small_problem">Player encountered a small problem</string>

    <string name="can_not_play">can not play this video</string>

    <string name="not_support">player not support this device</string>
</resources>
