<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_gravity="bottom"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:src="@mipmap/pic_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true">

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="bottom"
                android:src="@mipmap/icon_head_portrait" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/phone_num_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/icon_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:src="@mipmap/icon_phone" />

            <TextView
                android:id="@+id/phone_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_toEndOf="@+id/icon_phone"
                android:layout_toRightOf="@+id/icon_phone"
                android:text="手机号"
                android:textColor="@color/defualt_textcolor"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/phone_et"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@+id/phone_tv"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/icon_phone"
                android:background="@null"
                android:hint="请输入你的手机号"
                android:inputType="number"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@+id/phone_et"
                android:layout_marginTop="4dp"
                android:background="@color/line_color" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/phone_code_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/icon_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:src="@mipmap/icon_code" />

            <TextView
                android:id="@+id/code_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_toEndOf="@+id/icon_code"
                android:layout_toRightOf="@+id/icon_code"
                android:text="验证码"
                android:textColor="@color/defualt_textcolor"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/code_et"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@+id/code_tv"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/icon_code"
                android:background="@null"
                android:hint="请获取验证码"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/send_code_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/shape_round_send_code_btn_"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="发送验证码"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@+id/code_et"
                android:layout_marginTop="4dp"
                android:background="@color/line_color" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/account_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <ImageView
                android:id="@+id/icon_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:src="@mipmap/icon_user" />

            <TextView
                android:id="@+id/username_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_toEndOf="@+id/icon_user"
                android:layout_toRightOf="@+id/icon_user"
                android:text="@string/user_name"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/username_et"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@+id/username_tv"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/icon_user"
                android:background="@null"
                android:hint="@string/user_input_hint"
                android:textSize="12sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@+id/username_et"
                android:layout_marginTop="4dp"
                android:background="@color/line_color" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/account_passwd_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/icon_passwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:src="@mipmap/icon_password" />

            <TextView
                android:id="@+id/passwd_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_toEndOf="@+id/icon_passwd"
                android:layout_toRightOf="@+id/icon_passwd"
                android:text="@string/user_passwd"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/passwd_et"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@+id/passwd_tv"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/icon_passwd"
                android:background="@null"
                android:hint="@string/user_passwd_input_hint"
                android:inputType="textPassword"
                android:textSize="12sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@+id/passwd_et"
                android:layout_marginTop="4dp"
                android:background="@color/line_color" />
        </RelativeLayout>

        <TextView
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_round_login_btn_"
            android:gravity="center"
            android:text="@string/login_btn"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/forget_passwd_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="忘记密码"
                android:textSize="12sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1px"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/phone_login_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:clickable="false"
                android:text="手机号动态登陆"
                android:visibility="gone"
                android:textColor="@color/login_btn_bg_color"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/register_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="还没有账户？ "
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="注册会员"
                android:textColor="@color/login_btn_bg_color"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">

            <View
                android:layout_width="0dp"
                android:layout_height="1px"
                android:layout_weight="1"
                android:background="@color/line_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="快捷登录"
                android:textColor="#666666"
                android:textSize="12sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1px"
                android:layout_weight="1"
                android:background="@color/line_color" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/login_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:src="@mipmap/icon_wechat" />

            <ImageView
                android:id="@+id/login_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:src="@mipmap/icon_qq" />

            <ImageView
                android:id="@+id/login_weibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_weibo" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>


